--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
-          navigator.serviceWorker.register("./firebase-messaging-sw.js");
+          navigator.serviceWorker.register("firebase-messaging-sw.js");
           var serviceWorkerUrl =
             "flutter_service_worker.js?v=" + serviceWorkerVersion;
           navigator.serviceWorker.register(serviceWorkerUrl).then((reg) => {
